tests/ui/missing-display.stderr
error[E0277]: `MyError` doesn't implement `std::fmt::Display`
  --> tests/ui/missing-display.rs:4:1
   |
4  | pub enum MyError {
   | ^^^^^^^^^^^^^^^^ `MyError` cannot be formatted with the default formatter
   |
  ::: $RUST/std/src/error.rs
   |
   | pub trait Error: Debug + Display {
   |                          ------- required by this bound in `std::error::Error`
   |
   = help: the trait `std::fmt::Display` is not implemented for `MyError`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
